[workspace]
members=[ "analyzer","base", "match_util", "pub_lib"]
resolver = "2"

[workspace.package]
name = "rust_study"
version = "0.1.0"
authors = ["Evan.Pan"]
edition = "2024"

[workspace.dependencies]
match_util = {path = "./match_util", version = "0.1.0"}
analyzer = {path = "./analyzer", version = "0.1.0", features = ["analyzer"]}
